--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Fouad Mohamed Fouad",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
